# python-sample-app

./: .env  .gitignore  README.md  pyproject.toml  setup.cfg
python_sample_app/: __init__.py  hello.py
tests/: conftest.py  test_factory.py  test_hello.py
